--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,1 +1,4 @@
 @import url('~minireset.css/minireset.css');
+
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Montserrat:900&display=swap');
